# Robotics-ROS2

./: .gitignore  README.md
.reserve/src/lv5/: CMakeLists.txt
.reserve/src/lv5/src/: moveArm2.py  recordMoves.py
.reserve/src/lv5_move_it/: CMakeLists.txt
.reserve/src/lv5_move_it/config/: rob_manip_2.srdf
.reserve/src/lv5_move_it/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  gazebo.launch  move_group.launch  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml
install/: local_setup.sh  setup.sh
install/cpp_pkg/lib/cpp_pkg/: mynodecpp
install/cpp_pkg/share/cpp_pkg/: local_setup.sh  package.sh
install/my_bringup/share/my_bringup/: local_setup.sh  package.sh
install/my_interfaces/share/my_interfaces/: package.sh  package.xml
install/py_pkg/lib/py_pkg/: complex_pub  complex_sub  my_node
install/py_pkg/share/py_pkg/: package.sh
log/: latest_build
maps/: my_map.pgm  my_map.yaml
reserve/src/lv5/: package.xml
reserve/src/lv5/launch/: rob_draw.launch
reserve/src/lv5/models/: rob_manip_2.urdf
reserve/src/lv5/src/: moveArm.py
reserve/src/lv5_move_it/: package.xml
reserve/src/lv5_move_it/config/: fake_controllers.yaml  gazebo_rob_manip_2.urdf  joint_limits.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml
reserve/src/lv5_move_it/launch/: demo.launch  fake_moveit_controller_manager.launch.xml  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  stomp_planning_pipeline.launch.xml
src/amr/lv1/bob_robot_interfaces/: CMakeLists.txt  package.xml
src/amr/lv1/bob_robot_navigation/: package.xml  setup.cfg  setup.py
src/amr/lv1/my_bringup/: package.xml
src/amr/lv1/robot_bringup/: package.xml
src/amr/lv1/robot_description/: CMakeLists.txt
src/amr/lv3/amr_lv3/: setup.py
src/amr/lv5/quadcopter_bringup/: CMakeLists.txt  package.xml
src/amr/lv5/quadcopter_description/: CMakeLists.txt  package.xml
src/amr/lv5/tello/: setup.py
src/amr_lv3/: package.xml  setup.cfg
src/cpp_pkg/: CMakeLists.txt
src/cpp_pkg/src/: my_2node.cpp
src/lv1/robot_bringup/: CMakeLists.txt
src/lv1/robot_description/: package.xml
src/my_bringup/: CMakeLists.txt
src/my_bringup/launch/: amr_LV3_1.launch.py
src/my_interfaces/: CMakeLists.txt
src/my_interfaces/msg/: Complex.msg
src/nrs-lv2/lv2_zad/: package.xml  setup.py
src/nrs-lv2/rob_manip_bringup/: CMakeLists.txt
src/nrs-lv2/rob_manip_description/: package.xml
src/nrs-lv2/rob_manip_moveit/: CMakeLists.txt
src/nrs-lv2/test_moveit_cpp_api/: package.xml
src/nrs/lv1/nrs_lv1_interfaces/: CMakeLists.txt  package.xml
src/nrs/lv2/nrs-lv2/test_moveit_cpp_api/: CMakeLists.txt
src/nrs_lv1/: package.xml  setup.cfg  setup.py
src/nrs_lv1/nrs_lv1/: ShowHistory.py  TurtleControl.py  TurtlePub.py
src/nrs_lv1_bringup/: CMakeLists.txt
src/nrs_lv1_bringup/launch/: bringup.launch.py
src/nrs_lv1_interfaces/msg/: Znamenitost.msg
src/py_pkg/: package.xml  setup.py
src/py_pkg/py_pkg/: complex_pub.py  test_param.py
(+88 files in other folders)
