cmake_minimum_required(VERSION 3.8)
project(my_interfaces)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)

find_package(rosidl_default_generators REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
#List of interface (message, service, action) files each in their own line e.g. "msg/MyNewMessage.msg"
#DEPENDENCIES pkg1 pkg2 etc. #At the end of the section list dependencies needed to build msg/srv/action files
  msg/Complex.msg
)

ament_export_dependencies(rosidl_default_runtime)

ament_package()
