cmake_minimum_required(VERSION 3.8)
project(nrs_lv1_interfaces)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

find_package(rosidl_default_generators REQUIRED)
find_package(turtlesim REQUIRED)

# Dodavanje poruka
rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/Znamenitost.msg"
  DEPENDENCIES turtlesim
)

ament_package()
